# firmware-loader-adapter

./: .env.sh  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  Makefile  PRE_K_SETUP.md  README.md  config.toml.example  package-lock.json  package.json
.github/workflows/: ci.yml
backlog/: config.yml
backlog/tasks/: a-1 - Baseline-implementation-Secure-Rust-CLI-for-Serial-File-Transfer.md  a-2 - Project-Skeleton.md
src/: auth.rs  config.rs  file_ops.rs  main.rs  protocol.rs  serial.rs  session.rs
