[package]
name = "secure-serial-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tokio-serial = "5.4"
aes-gcm = "0.10"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
rpassword = "7.3"
dirs = "5.0"
sha2 = "0.10"
bincode = "1.3"
crc = "3.0"
toml = "0.8"
